--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -47,6 +47,9 @@ table {
 	border-spacing: 0;
 }
 /** end reset css**/
+:root {
+	--filter-color : #1D6154;
+}
 body {
 	max-width: 1140px;
 	margin:auto;
@@ -56,13 +59,13 @@ body {
 header {
 	display: flex;
 	justify-content: space-between;
-	margin: 50px 0
+	margin: 50px 0;
 }
 section {
 	margin: 50px 0
 }
 
-h1{
+h1 {
 	display: flex;
 	flex-direction: column;
 	font-family: 'Syne';
@@ -74,115 +77,229 @@ h1{
 h1 > span {
 	font-family: 'Work Sans';
 	font-size:10px;
-	letter-spacing: 0.1em;
-;
-}
+	letter-spacing: 0.05em;
+	text-transform: uppercase;
+	font-weight: 400;
+	margin-top: 0.7em;
+	}
 
-h2{
+h2 {
 	font-family: 'Syne';
 	font-weight: 700;
 	font-size: 30px;
 	color: #1D6154
 }
+header nav {
+	display: flex;
+	justify-content: center;
+}
+header a {
+	text-decoration: none;
+}
 nav ul {
 	display: flex;
 	align-items: center;
 	list-style-type: none;
-
 }
 nav li {
-	padding: 0 10px;
+	margin-left: 60px;
 	font-size: 1.2em;
+	list-style-type: none;
+	color: black;
 }
-
+nav a {
+	color: black;
+	text-decoration: none;
+}
+nav a:visited {
+	color: black;
+}
+nav img {
+	width: 22px;
+	height: 22px;
+}
 li:hover {
 	color: #B1663C;
+}
+#login-page {
+	font-weight: 700;
 }
 #introduction {
 	display: flex;
 	align-items: center;
+	margin: 10em 0 10em 6em;
 }
 #introduction figure {
-	flex: 1
+	flex: 1;
 }
 #introduction img {
 	display: block;
 	margin: auto;
-	width: 80%;
+	width: 474px;
 }
-
 #introduction article {
-	flex: 1
+	flex: 1;
+	padding-left: 50px;
 }
 #introduction h2 {
-	margin-bottom: 1em;
+	margin-bottom: 0.7em;
 }
 
 #introduction p {
-	margin-bottom: 0.5em;
+	width: 404px;
+	line-height: 16.42px;
+	margin-top: 1.2em;
+}
+#portfolio {
+    position: relative;
 }
 #portfolio h2 {
 	text-align: center;
-	margin-bottom: 1em;
+	margin-bottom: 1.5em;
+	position: relative;
+}
+#portfolio .category-filters {
+	display: flex;
+	justify-content: center;
+	gap: 10px;
+}
+#portfolio .filters {
+	cursor: pointer;
+	font-family: 'Syne';
+	color: var(--filter-color);
+    font-size: 16px;
+    font-weight: 700;    
+    border: 1px solid var(--filter-color);
+	background-color: white;
+    border-radius: 60px;
+	height: 37px;
+	min-width: 100px;
+	padding: 0 10px;
+	margin-bottom: 3em;
+}
+#portfolio .filter_selected {
+	color: white;
+	background-color: var(--filter-color);
 }
 .gallery {
-	width: 100%;
+	width: 82.8%;
 	display: grid;
+	justify-content: center;
 	grid-template-columns: 1fr 1fr 1fr;
 	grid-column-gap: 20px;
 	grid-row-gap: 20px;
+	margin: auto;
 }
-
 .gallery img {
 	width: 100%;
-
 }
+.gallery figcaption {
+	font-family: 'Work Sans';
+	font-size:13px;
+	font-weight: 400;
+	margin-top: 0.4em;
+	}
 #contact {
 	width: 50%;
 margin: auto;
 }
 #contact > * {
 	text-align: center;
-
 }
-#contact h2{
+
+#login-info > * {
+	text-align: center;
+	margin-top: 200px;
+}
+#contact h2,
+#login-info h2 {
 	margin-bottom: 20px;
+}
+#contact p {
+	font-family: 'Work Sans';
+	font-size: 16px;
 }
 #contact form {
 	text-align: left;
 	margin-top:30px;
 	display: flex;
 	flex-direction: column;
+	width: 65%;
+	margin: auto;
 }
-
-#contact input {
+#login-info form {
+	text-align: left;
+	display: flex;
+	flex-direction: column;
+	width: 30%;
+	margin: auto;
+}
+#contact input,
+#login-info input {
 	height: 50px;
 	font-size: 1.2em;
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
-#contact label {
+#contact label,
+#login-info label {
 	margin: 2em 0 1em 0;
 }
 #contact textarea {
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
-
-input[type="submit"]{
+#contact input[type="submit"]{
 	font-family: 'Syne';
+	font-size: 14px;
 	font-weight: 700;
 	color: white;
 	background-color: #1D6154;
-	margin : 2em auto ;
+	margin : 3em auto ;
 	width: 180px;
+	height: 36px;
 	text-align: center;
-	border-radius: 60px ;
+	border-radius: 60px;
 }
-
+#login-info input[type="submit"]{
+	font-family: 'Syne';
+	font-size: 14px;
+	font-weight: 700;
+	color: white;
+	background-color: #1D6154;
+	margin : 3em auto 2em auto;
+	width: 180px;
+	height: 36px;
+	text-align: center;
+	border-radius: 60px;
+}
+#login-info a {
+	font-family: 'Work Sans';
+	font-size: 14px;
+	font-weight: 500;
+	color: #3D3D3D;	
+	text-align: center;
+	margin-bottom: 300px;
+}
+#login-info a:visited {
+	color: #3D3D3D;
+}
+#connection-error-message {
+	color: #FF0000;
+}
+footer {
+	margin: 0;
+}
 footer nav ul {
 	display: flex;
 	justify-content: flex-end;
-	margin: 2em
+	margin: 2em 0 2em 2em;
 }
+footer nav li {
+	font-size: 14px;
+	font-weight: 300;
+	padding-right: 0;
+	margin-right: 0;
+}
+
 
