--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -384,7 +384,7 @@ footer nav li {
 	border-radius: 10px;
 }
 
-#modal-title {
+.modal-title {
 	display: flex;
 	font-family: 'Work Sans';
 	font-size: 26px;
@@ -397,7 +397,6 @@ footer nav li {
 	display: flex;
 	font-size: 24px;
 	justify-content: end;
-	margin: 0;
 	margin: 20px 20px 0 0;
 	cursor: pointer;
 }
@@ -451,4 +450,126 @@ footer nav li {
     color: white;
 	background-color: black; 
     cursor: pointer;
+}
+
+.modal-upload-section-window {
+	display: flex;
+	height: 400px;
+	flex-wrap: wrap;
+	justify-content: center;
+	margin: 50px 102.5px 0 102.5px;
+	padding-bottom: 50px;
+	border-bottom: 1px solid #B3B3B3;
+}
+
+.modal-top-icons {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	margin: 20px 20px 0 20px;
+}
+
+#modal-back-button {
+	font-size: 24px;
+	cursor: pointer;
+}
+
+#modal-close-button-2 {
+	font-size: 24px;
+	cursor: pointer;
+}
+
+.modal-upload-section {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	background-color: #e8f1f6;
+	width: 420px;
+	height: 169px;
+	border-radius: 3px;
+}
+
+.modal-upload-section i {
+	font-size: 76px;
+	color: #cbd6dc;
+}
+
+.modal-upload-section button {
+	width: 173px;
+	height: 36px;
+	border: none;
+	border-radius: 50px;
+	font-family: 'Work Sans';
+	font-size: 14px;
+	font-weight: 500;
+	color: #306685;
+	background-color: #cbd6dc;
+	margin: 6px 0;
+}
+
+.modal-upload-section p {
+	font-family: 'Work Sans';
+	font-size: 10px;
+	font-weight: 400;
+	color: #444444;	
+}
+
+#modal-upload-section-form {
+	text-align: left;
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	margin: auto;
+}
+
+#modal-upload-section-form label {
+	margin: 2em 0 1em 0;
+}
+
+#modal-upload-section-form textarea {
+	border: none;
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+}
+
+#modal-upload-section-form input {
+	height: 50px;
+	font-size: 1.2em;
+	border: none;
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+}
+
+#modal-upload-section-form input[type="submit"]{
+	font-family: 'Syne';
+	font-size: 14px;
+	font-weight: 700;
+	color: white;
+	background-color: #1D6154;
+	margin : 3em auto ;
+	width: 180px;
+	height: 36px;
+	text-align: center;
+	border-radius: 60px;
+}
+
+.modal-upload-section-button-validate {
+	position: absolute;
+	bottom: 5px;
+	left: 50%;
+	transform: translateX(-50%);
+	font-family: 'Syne';
+	font-size: 14px;
+	font-weight: 700;
+	color: white;
+	background-color: #A7A7A7;
+	margin : 3em auto ;
+	width: 237px;
+	height: 36px;
+	border-radius: 60px;
+	border: none;
+	cursor: pointer;
+}
+
+.modal-upload-section-button-validate-form-completed {
+	background-color: #1D6154;
 }
