--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -397,7 +397,7 @@ footer nav li {
 	display: flex;
 	font-size: 24px;
 	justify-content: end;
-	margin: 20px 20px 0 0;
+	margin: 22px 20px 0 0;
 	cursor: pointer;
 }
 
@@ -470,7 +470,7 @@ footer nav li {
 }
 
 #modal-back-button {
-	font-size: 24px;
+	font-size: 28px;
 	cursor: pointer;
 }
 
@@ -506,6 +506,7 @@ footer nav li {
 	color: #306685;
 	background-color: #cbd6dc;
 	margin: 6px 0;
+	cursor: pointer;
 }
 
 .modal-upload-section p {
@@ -532,9 +533,11 @@ footer nav li {
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
 
-#modal-upload-section-form input {
+#modal-upload-section-form input,
+#modal-upload-section-form select {
 	height: 50px;
 	font-size: 1.2em;
+	padding-left: 16px;
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
