Ajout barre de défilement si trop de projets
Ajout d'une barre de défilement si les projets présents dans la modale dépassent la taille de modal-gallery

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -429,6 +429,7 @@ footer nav li {
 	margin: 50px 102.5px 0 102.5px;
 	padding-bottom: 50px;
 	border-bottom: 1px solid #B3B3B3;
+	overflow-y: auto;
 }
 
 .modal-gallery-image {
