--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -191,11 +191,12 @@ li:hover {
 	margin: auto;
 }
 .gallery img {
-	width: 100%;
+	width: 305px;
+	height: 407px;
 }
 .gallery figcaption {
 	font-family: 'Work Sans';
-	font-size:13px;
+	font-size:13px; 
 	font-weight: 400;
 	margin-top: 0.4em;
 	}
@@ -525,7 +526,7 @@ footer nav li {
 
 .modal-upload-section .error-message-file-selected {
 	position: fixed;
-	top: 630px;
+	top: 580px;
 	font-family: 'Work Sans';
 	font-size: 10px;
 	color: red;
